--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -134,8 +134,8 @@
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=vrs_vaihingen">vrs_vaihingen</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=freiburg_p_r_static">freiburg_p_r_static</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=freiburg_p_r_sensors">freiburg_p_r_sensors</a></li>
-		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=bfrk_bw_bike">bfrk_bw_bike</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=bfrk_bw_car">bfrk_bw_car</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=bfrk_bw_bike">bfrk_bw_bike</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=opendata_swiss">opendata_swiss</a></li>
 	</ul>
 
@@ -167,6 +167,7 @@
 	<p></p><strong>Einzelparkplätze</strong></p>
 
 	<ul>
+		<li><a href="/park-api/api/public/v3/parking-spots?source_uid=bfrk_bw_car">bfrk_bw_car</a></li>
 		<li><a href="/park-api/api/public/v3/parking-spots?source_uid=freiburg_disabled_static">freiburg_disabled_static</a></li>
 		<li><a href="/park-api/api/public/v3/parking-spots?source_uid=freiburg_disabled_sensors">freiburg_disabled_sensors</a></li>
 		<li><a href="/park-api/api/public/v3/parking-spots?source_uid=friedrichshafen_sensors">friedrichshafen_sensors</a></li>
