--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -156,6 +156,8 @@
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=keltern">keltern</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=konstanz">konstanz</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=ladenburg_parkraumcheck">ladenburg_parkraumcheck</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=park_raum_check_sachsenheim">park_raum_check_sachsenheim</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=park_raum_check_kehl">park_raum_check_kehl</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=mannheim">mannheim</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=neckarsulm">neckarsulm</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=pforzheim">pforzheim</a></li>
