--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -37,7 +37,7 @@
 
 	<h2>Sharing-Daten</h2>
 
-	<p>Daten von Autos, Leihfahrrädern, Lastenrädern und E-Scootern werden über den gebündelten GBFS-Feed <a href="/sharing/gbfs"><code>/sharing/gbfs</code></a> publiziert, der seinerseits GBFS-Feeds für die einzelnen Provider aggregiert.</p>
+	<p>Daten von Autos, Leihfahrrädern, Lastenrädern und E-Scootern werden über den gebündelten GBFS-Feed <a href="/sharing/gbfs"><code>/sharing/gbfs</code></a> (<a href="https://github.com/MobilityData/gbfs/blob/v2.3/gbfs.md"><code>v2.3</code></a>) bzw. <a href="/sharing/gbfs/v3/manifest.json"><code>/sharing/gbfs/v3/manifest.json</code> (<a href="https://github.com/MobilityData/gbfs/blob/v3.0/gbfs.md"><code>v3.0</code></a>) publiziert, der seinerseits GBFS-Feeds für die einzelnen Provider aggregiert.</p>
 
 	<p>Der Endpunkt <a href="/sharing/validation/systems"><code>/sharing/validation/systems</code></a> liefert das Validierungsergebnis dieser GBFS-Feeds, <a href="/sharing/graphiql?path=/sharing/graphql"><code>/sharing/graphiql?path=/sharing/graphql</code></a> bietet eine GraphQL Schnittstelle an.</p>
 
