--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -151,6 +151,7 @@
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=freiburg_scanner">freiburg_scanner</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=heidelberg">heidelberg</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=heidelberg_easypark">heidelberg_easypark</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=heilbronn_goldbeck">heilbronn_goldbeck</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=herrenberg">herrenberg</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=karlsruhe">karlsruhe</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=keltern">keltern</a></li>
