--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -164,6 +164,7 @@
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=pforzheim">pforzheim</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=radolfzell">radolfzell</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=reutlingen">reutlingen</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=singen">singen</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=ulm_sensors">ulm_sensors</a></li>
 	</ul>
 
