--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -19,9 +19,9 @@
 		</span> Integrationsplattform (IPL)
 	</h1>
 
-	Hier werden Mobilitätsdaten aus den Bereichen Fahrpläne, Sharing, Parken, Ladesäulen und Verkehrsmeldungen gebündelt und über offene APIs bereitstellt.</p>
+	Hier werden Mobilitätsdaten aus den Bereichen Fahrpläne, Sharing, Parken, Ladesäulen, Verkehrsmeldungen und Baustellen gebündelt und über offene APIs bereitstellt.</p>
 
-	<p><strong>Die Endpunkte der Integrationsplattform benötigen keine Zugangsdaten und sind für alle offen verfügbar.</strong></p>
+	<p><strong>Die Endpunkte der Integrationsplattform benötigen keine Zugangsdaten und sind für alle offen verfügbar. Anwendungen sollten sich durch einen <a href="https://everything.curl.dev/http/modify/user-agent.html"><code>User-Agent</code></a> identifizieren.</strong></p>
 
 	<p>Die Integrationsplattform ist <a href="https://github.com/mobidata-bw">auf GitHub</a> archiviert und dokumentiert. Das <a href="https://github.com/mobidata-bw/ipl-orchestration/blob/main/CHANGELOG.md">Changelog</a> protokolliert wichtige Änderungen. Unsere Kontakt E-Mail-Adresse: <a href="mailto:mobidatabw-ipl@nvbw.de">mobidatabw-ipl@nvbw.de</a></p>
 
