--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -209,8 +209,9 @@
 	<ul>
 		<li><a href="/ocpdb/api/public/v1/locations?source_uid=bnetza_api&limit=1000">bnetza_api</a></li>
 		<li><a href="/ocpdb/api/public/v1/locations?source_uid=chargecloud_stuttgart&limit=1000">chargecloud_stuttgart</a></li>
-		<li><a href="/ocpdb/api/public/v1/locations?source_uid=chargecloud_pforzheim">chargecloud_pforzheim</a></li>
-		<li><a href="/ocpdb/api/public/v1/locations?source_uid=chargecloud_tuebingen">chargecloud_tuebingen</a></li>
+	    <li><a href="/ocpdb/api/public/v1/locations?source_uid=chargecloud_ludwigsburg&limit=1000">chargecloud_ludwigsburg</a></li>
+		<li><a href="/ocpdb/api/public/v1/locations?source_uid=chargecloud_pforzheim&limit=1000">chargecloud_pforzheim</a></li>
+		<li><a href="/ocpdb/api/public/v1/locations?source_uid=chargecloud_tuebingen&limit=1000">chargecloud_tuebingen</a></li>
 		<li><a href="/ocpdb/api/public/v1/locations?source_uid=eaaze_pbw">eaaze_pbw</a></li>
 		<li><a href="/ocpdb/api/public/v1/locations?source_uid=ochp_albwerk">ochp_albwerk</a></li>
 		<li><a href="/ocpdb/api/public/v1/locations?source_uid=heilbronn_neckarbogen">heilbronn_neckarbogen</a></li>
