--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -57,7 +57,9 @@
 	
 	<h2>Ladesäulendaten</h2>
 
-	<p>Ladesäulendaten werden über die <a href="/ocpdb/documentation/public.html">Open ChargePoint DataBase (OCPDB)</a> publiziert, wobei der Endpunkt <a href="/ocpdb/api/public/v1/locations"><code>/ocpdb/api/public/v1/locations</code></a> detaillierte Informationen aller Ladesäulen aufführt.</p>
+	<p>Ladesäulendaten werden über die <a href="/ocpdb/documentation/public.html">Open ChargePoint DataBase (OCPDB)</a> publiziert.</p>
+
+	<p>Der Endpunkt <a href="/ocpdb/api/public/v1/locations"><code>/ocpdb/api/public/v1/locations</code></a> liefert die Daten von Ladesäulen, <a href="/ocpdb/api/public/v1/evses"><code>/ocpdb/api/public/v1/evses</code></a> liefert die Daten von Ladepunkten, <a href="/ocpdb/api/public/v1/sources"><code>/ocpdb/api/public/v1/sources</code></a> listet die Datenquellen.<\p>
 
 	<p>Der Endpunkt <a href="/ocpdb/metrics"><code>/ocpdb/metrics</code></a> liefert die OCPDB Metriken.</p>
 
