--- a/etc/index-page/index.html
+++ b/etc/index-page/index.html
@@ -131,6 +131,7 @@
 
 	<ul>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=vrn_p_r">vrn_p_r</a></li>
+		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=vrn_p_r_mannheim">vrn_p_r_mannheim</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=vrs-p-r">vrs-p-r</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=vrs_bondorf">vrs_bondorf</a></li>
 		<li><a href="/park-api/api/public/v3/parking-sites?source_uid=vrs_kirchheim">vrs_kirchheim</a></li>
